--- a/assets/style.css
+++ b/assets/style.css
@@ -35,3 +35,45 @@ body {
     line-height: 1;
     letter-spacing: 0.25rem;
 }
+
+.landing-content h2 {
+    font-size: 4.3rem;
+    font-weight: 900;
+    line-height: 1;
+}
+
+.landing-content a {
+    font-size: 1.20rem;
+}
+
+.about-cir {
+    width: 220px;
+    height: 220px;
+    background-color: #16a085;
+    color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-cir h2 {
+    font-size: 3rem;
+    font-weight: 900;
+}
+
+.so-icon {
+    font-size: 2.1rem;
+    margin-right: 10px;
+    color: #16a085 !important;
+}
+
+.so-icon:hover {
+    color: #1abc9c !important;
+}
+
+#portfolio {
+    background: #ECEBE4;
+    background-image: url(../images/rough_diagonal.png);
+    background-attachment: fixed;
+}
